[explorer] Home page metrics from indexer (#7621)

--- a/apps/explorer/src/components/transaction-card/RecentTxCard.module.css
+++ b/apps/explorer/src/components/transaction-card/RecentTxCard.module.css
@@ -19,7 +19,7 @@ div.txcardgrid > div:first-child {
 }
 
 .txlatestresults {
-    @apply m-auto mx-auto mb-[2rem];
+    @apply mx-auto mb-[2rem] w-full;
 }
 
 div.txadd {
