--- a/apps/wallet/src/ui/app/shared/page-main-layout/PageMainLayout.module.scss
+++ b/apps/wallet/src/ui/app/shared/page-main-layout/PageMainLayout.module.scss
@@ -16,9 +16,9 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    padding: 0 15px;
-    justify-content: space-between;
+    padding: 0 12px;
     min-height: 52px;
+    gap: 20px;
 
     &.center {
         justify-content: center;
@@ -53,4 +53,25 @@
 .with-nav {
     padding: 25px sizing.$main-sides-space;
     @include utils.main-extra-space-for-nav;
+}
+
+.dapp-status-container {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.logo-container,
+.menu-container {
+    display: flex;
+    flex: 1 0;
+    align-items: center;
+}
+
+.logo-container {
+    justify-content: flex-start;
+}
+
+.menu-container {
+    justify-content: flex-end;
 }
