--- a/apps/wallet/src/ui/app/shared/button/Button.module.scss
+++ b/apps/wallet/src/ui/app/shared/button/Button.module.scss
@@ -40,9 +40,14 @@
 
     &.secondary {
         background: none;
-        color: colors.$sui-blue-steel-dark;
-        border: 1px solid colors.$gray-55;
+        color: colors.$sui-steel-blue;
+        border: 1px solid colors.$sui-steel-blue;
         border-radius: 12px;
+    }
+
+    &.secondary:hover {
+        border-color: colors.$sui-blue-steel-dark;
+        color: colors.$sui-blue-steel-dark;
     }
 
     &.primary {
@@ -74,7 +79,7 @@
     }
 
     &.large {
-        padding: 12px 20px;
+        padding: 13px 20px;
         border-radius: 12px;
         gap: 8px;
 
