--- a/apps/wallet/src/ui/app/shared/button/Button.module.scss
+++ b/apps/wallet/src/ui/app/shared/button/Button.module.scss
@@ -28,14 +28,14 @@
 
     &.outline {
         background: none;
-        color: colors.$sui-steel-blue;
+        color: colors.$sui-blue-steel-dark;
         border: 1px solid colors.$sui-steel-blue;
         border-radius: 12px;
     }
 
     &.outline:hover {
         border-color: colors.$sui-blue-steel-dark;
-        color: colors.$sui-blue-steel-dark;
+        color: colors.$sui-blue-steel-darker;
     }
 
     &.secondary {
