Final frenemies fixes

--- a/dapps/frenemies/src/index.css
+++ b/dapps/frenemies/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-    @apply font-sans antialiased bg-no-repeat bg-top bg-cover min-h-screen;
+    @apply font-sans antialiased bg-no-repeat bg-top bg-cover min-h-screen bg-fixed;
     background-image: url('/backdrop.svg');
 }
