--- a/apps/explorer/src/pages/transaction-result/TransactionResult.module.css
+++ b/apps/explorer/src/pages/transaction-result/TransactionResult.module.css
@@ -42,7 +42,7 @@
 .txgridcolspan2 {
     grid-column: span 2;
     border-right: 1px solid #f0f1f2;
-    @apply border-0 md:border-r-[1px] md:border-[#f0f1f2];
+    @apply md:border-r-[1px] md:border-[#f0f1f2];
 }
 
 .txgridcolspan3 {
