--- a/apps/explorer/src/components/transaction-card/RecentTxCard.module.css
+++ b/apps/explorer/src/components/transaction-card/RecentTxCard.module.css
@@ -67,7 +67,7 @@ div.txadd {
 }
 
 .moretxbtn {
-    @apply flex w-full cursor-pointer items-center gap-[6px] border-0
+    @apply flex w-full cursor-pointer items-center gap-[6px]
    bg-transparent pl-0 pr-0
     text-[14px] font-semibold text-gray-90
     hover:text-gray-70;
