--- a/apps/explorer/src/components/displaybox/DisplayBox.module.css
+++ b/apps/explorer/src/components/displaybox/DisplayBox.module.css
@@ -71,7 +71,7 @@ div.detailsbg {
 }
 
 .automod {
-    @apply w-1/2 border-b-2 border-solid border-gray-45;
+    @apply w-1/2 border-b-2 border-gray-45;
 
     background-color: #d8e5ea;
     position: relative;
