--- a/apps/explorer/src/components/module/ModuleView.module.css
+++ b/apps/explorer/src/components/module/ModuleView.module.css
@@ -6,7 +6,7 @@ pre {
 }
 
 div.code {
-    @apply overflow-auto whitespace-pre border-solid border-gray-45 p-2 text-sm;
+    @apply overflow-auto whitespace-pre border-gray-45 p-2 text-sm;
 }
 
 section .codeview {
