[explorer] - enable css reset (#8226)
- enables tailwind `preflight` and adjusts styles affected by the
inclusion of a css reset
- update footer to use tailwind / align with designs
- addresses some tech debt in AddressResult / ObjectView and align with
designs
- adds lint rule to enforce implicit return as needed

--- a/apps/explorer/src/components/ownedobjects/styles/OwnedObjects.module.css
+++ b/apps/explorer/src/components/ownedobjects/styles/OwnedObjects.module.css
@@ -12,7 +12,7 @@
 }
 
 .layout > div:first-child {
-    @apply sm:mr-[4vw] sm:border-0 sm:border-r sm:border-solid sm:border-gray-45 sm:pr-[4vw];
+    @apply sm:mr-[4vw] sm:border-0 sm:border-r sm:border-gray-45 sm:pr-[4vw];
 }
 
 .ownedobjects {
@@ -20,7 +20,7 @@
 }
 
 .objectbox {
-    @apply my-[5vh] flex h-fit min-h-[72px] items-center break-all sm:my-[1vh] lg:w-[50%];
+    @apply my-2 flex h-fit min-h-[72px] items-center break-all sm:my-[1vh] lg:w-[50%];
 }
 
 .objectbox a {
@@ -32,7 +32,7 @@
 }
 
 .ownedobjectheader {
-    @apply pb-1;
+    @apply my-4;
 }
 
 .ownedobjectheader > h2 {
