--- a/apps/explorer/src/index.css
+++ b/apps/explorer/src/index.css
@@ -15,30 +15,6 @@
 }
 
 body {
-    @apply m-0 font-sans text-offblack antialiased;
-}
-
-/*
- * Reset the font-family for elements that override their font-family by default.
- * This will no longer be needed once we use the Tailwind CSS Reset.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-    font-family: inherit;
-}
-
-input:focus,
-textarea:focus,
-select:focus {
-    outline: none;
-}
-
-/* Fix inconsistent font size rendering on iphone */
-@media screen and (max-device-width: 480px) {
-    body {
-        text-size-adjust: none;
-    }
+    @apply antialiased;
+    @apply font-sans text-offblack;
 }
