valid email notification full width

--- a/apps/wallet/src/ui/app/components/address-input/AddressInput.module.scss
+++ b/apps/wallet/src/ui/app/components/address-input/AddressInput.module.scss
@@ -79,6 +79,7 @@
     border-radius: 6px;
     word-break: break-all;
     padding: 7px 13px;
+    width: 100%;
 
     i {
         color: colors.$success-dark;
