--- a/apps/wallet/src/ui/app/components/menu/button/MenuButton.module.scss
+++ b/apps/wallet/src/ui/app/components/menu/button/MenuButton.module.scss
@@ -5,6 +5,7 @@ $btn-height: 14px;
 $line-height: 2px;
 
 .button {
+    display: block;
     background: none;
     outline: none;
     border: none;
