--- a/apps/wallet/src/ui/styles/themes/light.scss
+++ b/apps/wallet/src/ui/styles/themes/light.scss
@@ -3,8 +3,8 @@
 @use '_values/colors' as c-val;
 
 $values: (
-    c-var.$background: #f1f8fd,
-    c-var.$background-color: #f1f8fd,
+    c-var.$background: c-val.$sui-alice-blue,
+    c-var.$background-color: c-val.$sui-alice-blue,
     c-var.$text-on-background: c-val.$gray-95,
     c-var.$main-content-background: c-val.$white,
     c-var.$text-on-main-content-background: c-val.$gray-100,
