--- a/apps/wallet/src/ui/styles/values/colors.scss
+++ b/apps/wallet/src/ui/styles/values/colors.scss
@@ -13,6 +13,7 @@ $gray-90: #3d444d;
 $gray-95: #2a3645;
 $gray-100: #182435;
 $sui-blue: #6fbcf0;
+$sui-alice-blue: #f1f8fd;
 $sui-dark-blue: #1f6493;
 $sui-steel-blue: #a0b6c3;
 $sui-steel-darker: #566873;
