--- a/apps/wallet/src/ui/styles/themes/light.scss
+++ b/apps/wallet/src/ui/styles/themes/light.scss
@@ -3,16 +3,12 @@
 @use '_values/colors' as c-val;
 
 $values: (
-    c-var.$background: c-val.$gray-40,
-    c-var.$background-color: c-val.$gray-40,
+    c-var.$background: c-val.$sui-alice-blue,
+    c-var.$background-color: c-val.$sui-alice-blue,
     c-var.$text-on-background: c-val.$gray-95,
     c-var.$main-content-background: c-val.$white,
     c-var.$text-on-main-content-background: c-val.$gray-100,
-    shadows.$main-content: (
-        0 0 29px rgb(0 0 0 / 10%),
-        0 0 44px rgb(0 0 0 / 5%),
-        0 0 6px rgb(0 0 0 / 2%),
-    ),
+    shadows.$main-content: 0 -5px 20px 5px rgb(111 188 240 / 11%),
     c-var.$nav-background-color: #f0f9ffb0,
     c-var.$nav-background-filter: blur(40px),
     c-var.$nav-item-color: c-val.$gray-60,
