--- a/apps/wallet/src/ui/styles/variables/colors.scss
+++ b/apps/wallet/src/ui/styles/variables/colors.scss
@@ -7,6 +7,7 @@ $nav-background-color: '--colors-nav-background-color';
 $nav-background-filter: '--colors-nav-background-filter';
 $nav-item-color: '--colors-nav-item-color';
 $nav-item-highlighted-color: '--colors-nav-item-highlighted-color';
-$nav-item-icon-highlighted-color: '--colors-nav-item-icon-highlighted-color';
-$nav-item-icon-highlighted-gradient-color: '--colors-nav-item-icon-highlighted-gradient-color';
+$nav-item-active-color: '--colors-nav-item-active-color';
+$nav-item-active-highlighted-color: '--colors-nav-item-active-highlighted-color';
+$filter-item-background-color: '--colors-filter-item-background-color';
 $menu-btn-color: '--colors-menu-btn-color';
