--- a/apps/wallet/src/ui/app/shared/dapp-status/DappStatus.module.scss
+++ b/apps/wallet/src/ui/app/shared/dapp-status/DappStatus.module.scss
@@ -60,6 +60,8 @@
 .origin-text {
     @include utils.overflow-ellipsis;
     @include utils.typography('Primary/SubtitleSmall-M');
+
+    color: white;
 }
 
 .origin-url {
