[wallet] do some design polish on the wallet tabs and filters (#8687)
## Description 

 - Updates the blur filter on the tabs container
- Updates the link (normal, active, active and hovered, hovered) styles
in the tab container
- Updates some typography and colors for the filters that appear above
the tabs
- Changes the color of the "Connected to XXX" text in the dApp status
button from green -> white (this was a leftover change I forgot to make
in https://github.com/MystenLabs/sui/pull/8592)


https://user-images.githubusercontent.com/7453188/221682698-9dd09075-993d-495c-a6e1-cc72105fb233.mov



## Test Plan 

- 👁️ 

---
If your changes are not user-facing and not a breaking change, you can
skip the following section. Otherwise, please indicate what changed, and
then add to the Release Notes section as highlighted during the release
process.

### Type of Change (Check all that apply)

- [ ] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

### Release notes
N/A

--- a/apps/wallet/src/ui/app/shared/dapp-status/DappStatus.module.scss
+++ b/apps/wallet/src/ui/app/shared/dapp-status/DappStatus.module.scss
@@ -61,7 +61,7 @@
     @include utils.overflow-ellipsis;
     @include utils.typography('Primary/SubtitleSmall-M');
 
-    color: colors.$success;
+    color: white;
 }
 
 .origin-url {
