--- a/apps/wallet/src/ui/styles/themes/dark.scss
+++ b/apps/wallet/src/ui/styles/themes/dark.scss
@@ -13,7 +13,7 @@ $values: (
     c-var.$nav-background-filter: blur(40px),
     c-var.$nav-item-color: c-val.$sui-steel-blue,
     c-var.$nav-item-highlighted-color: c-val.$white,
-    c-var.$nav-item-icon-highlighted-color: c-val.$sui-blue,
-    c-var.$nav-item-icon-highlighted-gradient-color: none,
+    c-var.$nav-item-active-color: c-val.$hero-dark,
+    c-var.$nav-item-active-highlighted-color: c-val.$hero,
     c-var.$menu-btn-color: c-val.$white,
 );
