--- a/apps/wallet/src/ui/app/components/overlay/Overlay.module.scss
+++ b/apps/wallet/src/ui/app/components/overlay/Overlay.module.scss
@@ -14,7 +14,8 @@
     position: fixed;
     z-index: 100;
     top: 0;
-    margin-left: -20px;
+    left: 0;
+    right: 0;
     backdrop-filter: blur(20px);
 }
 
