--- a/apps/wallet/src/ui/styles/global.scss
+++ b/apps/wallet/src/ui/styles/global.scss
@@ -40,10 +40,27 @@ body {
     font-family: InterVariable, sans-serif;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background: url('_assets/images/welcome_bg.svg') no-repeat center center;
+    background-size: cover;
+    position: relative;
+}
+
 #root {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-flow: column nowrap;
+}
+
+#overlay-container {
+    position: absolute;
+    z-index: 99999;
 }
 
 * {
