--- a/apps/wallet/src/ui/styles/global.scss
+++ b/apps/wallet/src/ui/styles/global.scss
@@ -46,7 +46,8 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url('_assets/images/welcome_bg.svg') no-repeat center center;
+    background: url('_assets/images/primary_wallet_bg.svg') no-repeat center
+        center;
     background-size: cover;
     position: relative;
 }
